Fix overflow bar in to-do-list

--- a/frontend projects/To-do-list/To-do-list.css
+++ b/frontend projects/To-do-list/To-do-list.css
@@ -534,3 +534,8 @@ body {
 
 
 }
+
+.overflow-hidden{
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
